<resources>
    <string name="app_name">Enel Lotto App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forforPassword">Forgot Password?</string>
    <string name="Login">Login</string>
    <string name="signinFacebook">Sign In With Facebook</string>
    <string name="signin">Sign In</string>
    <string name="donthave">Don’t have an account? </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullname">Full Name</string>
    <string name="phone">Phone Number</string>
    <string name="pin">4 Digit Pin (for offline play)</string>
    <string name="signup">Sign Up</string>
    <string name="alreadyhave">Already have an account?</string>
    <string name="loginnow">Login here</string>
    <string name="chooseThree">CHOOSE 3 NUMBERS (1-41)</string>
    <string name="chooseFive">CHOOSE 5 NUMBERS (1-36)</string>
    <string name="chooseSix">CHOOSE 6 NUMBERS (1-49)</string>
    <string name="play">PLAY</string>
    <string name="pick4me">PICK FOR ME</string>
    <string name="submitTicket">SUBMIT TICKET</string>
    <string name="availBal">Available balance:</string>
    <string name="initBalace">Initial balance:</string>
    <string name="millionOne">₦1,000,000</string>
</resources>
