<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/NoActionBar2"
    android:layout_height="match_parent"
    tools:context="com.shixels.thankgodrichard.enellottoapp.Auth.Auth">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/bg"/>


    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/mainContainer"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_marginTop="38dp"
                android:src="@drawable/full_logo_white"
                android:layout_height="wrap_content" />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/forms"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="44dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:background="@null"
                            android:maxLength="20"
                            android:inputType="text"
                            android:layout_marginLeft="33dp"
                            android:id="@+id/userName"
                            android:layout_toRightOf="@+id/userNameImage"
                            android:fontFamily="sans-serif" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="11dp"
                            android:layout_below="@+id/userName"
                            android:background="@android:color/white"/>

                        <ImageView
                            android:layout_width="16.7dp"
                            android:layout_height="16.7dp"
                            android:src="@drawable/user"
                            android:id="@+id/userNameImage"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true" />


                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="30dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="16.7dp"
                            android:layout_height="16.7dp"
                            android:src="@drawable/locked"
                            android:id="@+id/passwordImage"/>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:textSize="16sp"
                            android:inputType="textPassword"
                            android:background="@null"
                            android:layout_marginLeft="33dp"
                            android:id="@+id/password"
                            android:layout_toRightOf="@+id/passwordImage"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="11dp"
                            android:layout_below="@+id/password"
                            android:background="@android:color/white"/>


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10sp"
                            android:id="@+id/forgotpass"
                            android:clickable="true"
                            android:layout_marginTop="2.7dp"
                            android:layout_alignParentRight="true"
                            android:text="@string/forforPassword"
                            android:textStyle="bold" />
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:id="@+id/loginContainer"
                        android:layout_height="wrap_content">
                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="35dp"
                                android:textSize="16sp"
                                android:id="@+id/signinText"
                                android:layout_marginTop="22dp"
                                android:background="@drawable/rectangle"
                                android:layout_toRightOf="@+id/signlogo"
                                android:text="@string/signin"/>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_marginTop="8dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <View
                                android:layout_width="61dp"
                                android:layout_marginTop="11dp"
                                android:layout_height="1dp"
                                android:layout_below="@+id/password"
                                android:layout_marginRight="5dp"
                                android:background="@android:color/white"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="OR"
                                android:id="@+id/orText"
                                android:textSize="16.7sp"/>
                            <View
                                android:layout_width="61dp"
                                android:layout_marginTop="11dp"
                                android:layout_marginLeft="5dp"
                                android:layout_height="1dp"
                                android:layout_below="@+id/password"
                                android:background="@android:color/white"/>

                        </LinearLayout>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            android:layout_marginTop="11dp"
                            android:clickable="true"
                            android:id="@+id/facebooksignin"
                            android:src="@drawable/sign_up_with_facebook"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="40dp"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/donthave"
                                android:textSize="13sp"
                                android:text="@string/donthave"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/register"
                                android:textSize="13sp"
                                android:layout_marginLeft="3dp"
                                android:text="Register here"
                                android:textStyle="normal|bold" />

                        </LinearLayout>



                    </LinearLayout>


                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </RelativeLayout>


</FrameLayout>
